2006-12-21  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_graphics) docs/gnuplot.doc:
	Announce deprecation of "set size" to control output canvas size.
	Document the intended difference:
		set term ... size XX,YY    controls size of canvas
		set size XX,YY             scales relative to the canvas
	Warn that png/gif/jpeg (and pbm pdf) terminals honor old syntax for now,
	but will require explicit 'set term size ...' in post-4.2 versions.

2006-12-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_tokenise df_parse_string): Allow for quoted
	strings in comma-separated value files.
	Bug #1614424

	* src/graph3d.c (draw_3d_graphbox): Honor 2D front/back settings
	for axis, grid, and border elements in 3D plots with "set view map".

2006-12-15  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: Fix spelling of BACKWARDS_COMPATIBLE

2006-12-10  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/README src/graphics.c (plot_image_or_update_axes): 
	Augmented sign tests for determining image pixel orientation with the
	terminal scales in the x and y dimensions.
	Bug #1589589

2006-12-09  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): If the first data file is non-empty but
	has no usable data, then auto-scaling fails. Instead of a fatal error,
	just print a warning and try to plot subsequent data files.
	Bug #1610430

	* demo/borders.dem: Replace deprecated syntax defined(bb) with 
	exists("bb").

	* configure.in: Make the selection of backwards-compatibility an 
	explicit option.  We have been enabling it without even asking.
	Now you can disable it if you want to.
	Defaults to --enable-backwards-compatibiliy

2006-12-08  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_tic_prop) src/save.c (save_tics): NO_TICS is
	a bitmask value, not an integer constant. All tests for NO_TICS
	must be masked through TICS_MASK.
	Bug #1611764

2006-12-07  Timothee Lecomte  <timothee.lecomte@ens.fr>
